--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: REx Lab
-url: https://roboticexplorationlab.github.io
+url: https://encryptlab.github.io
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
 
